--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     background-color: rgb(8, 3, 30);
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
 }
 .navbar{
 background-color: aliceblue;
@@ -61,3 +64,26 @@ span{
     display:block
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins%3Awght%40100%3B200%3B300%3B400%3B500%3B600&display=swap%27%29%3B")
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    border: none;
+    outline: none;
+    font-family: 'Poppins',sans-serif;
+}
+
+html{
+    font-size: 70.5%;
+}
+
+/* الحاوية الرئيسية 
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 20px;
+}
+
+/*
