--- a/style.css
+++ b/style.css
@@ -69,7 +69,8 @@ flex-basis: 100px;
     color: aliceblue;
     border-radius: 20px;
      height: 35rem;
-      box-shadow: 0px 10px 10px rgb(100 100 100 / 100%) ; 
+    box-shadow: 0px 10px 10px rgb(100 100 100 / 100%) ; 
+    height: fit-content;
 
 }
 
