--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h2:hover{
     
 }
 .btn{
-    background-color: beige;
+   background-color: beige;
     border-color: beige;
     color: rgb(7, 12, 105);
     border-radius: 20px;
@@ -55,8 +55,9 @@ h2:hover{
     display: flex;
     justify-content: center;
     align-self: flex-end;
-flex-grow: 1;
-flex-basis: 100px;
+    flex-grow: 1;
+    flex-basis: 100px;
+    
 }
 .btn:hover{
      box-shadow: 0px 10px 10px rgb(255, 255, 255) ;
@@ -70,7 +71,7 @@ flex-basis: 100px;
     border-radius: 20px;
      height: 35rem;
     box-shadow: 0px 10px 10px rgb(100 100 100 / 100%) ; 
-    height: fit-content;
+    
 
 }
 
@@ -105,10 +106,22 @@ span{
   }
 }
 
-/* للشاشات الكبيرة مثل اللابتوب والديسكتوب */
-@media (min-width: 1025px) {
-  body {
-    font-size: 18px;
-    padding: 30px;
-  }
+
+
+.test .row {
+  display: flex;
+  flex-wrap: wrap;
+  height: fit-content;
 }
+
+.test .col {
+  display: flex;
+}
+
+.test .card {
+  flex: 1rem;
+  height: 100%;
+}
+
+
+
